--- a/Zipssa/app/src/main/res/values/dimens.xml
+++ b/Zipssa/app/src/main/res/values/dimens.xml
@@ -6,64 +6,17 @@
 	<dimen name="shadow_size">3dp</dimen>
 	<dimen name="popup_sizeH">250dp</dimen>
 
-	<!-- alarm information -->
-	<dimen name="alarm_page_back_size">20dp</dimen>
-	<dimen name="alarm_page_back_marginH">15dp</dimen>
+	<dimen name="titlebar_back_size">20dp</dimen>
+	<dimen name="titlebar_back_marginH">20dp</dimen>
+	<dimen name="titlebar_title_text">20sp</dimen>
 
-	<dimen name="alarm_page_contentbox_sizeH">20dp</dimen>
-	<dimen name="alarm_page_contentbox_paddingH">10dp</dimen>
-
-	<dimen name="alarm_page_name_marginT">30dp</dimen>
-	<dimen name="alarm_page_name_marginH">15dp</dimen>
-	<dimen name="alarm_page_name_marginB">5dp</dimen>
-
-	<dimen name="alarm_page_box_paddingH">15dp</dimen>
-	<dimen name="alarm_page_box_paddingV">10dp</dimen>
-
-	<dimen name="alarm_page_content_marginH">20dp</dimen>
-	<dimen name="alarm_page_content_paddingV">10dp</dimen>
-	<dimen name="alarm_page_content_distanceV">5dp</dimen>
-	<dimen name="alarm_page_content_distanceVL">10dp</dimen>
-	<dimen name="alarm_page_content_distanceH">5dp</dimen>
-
-	<dimen name="alarm_page_count_paddingV">5dp</dimen>
-	<dimen name="alarm_page_time_paddingV">7dp</dimen>
-
-	<dimen name="alarm_page_split_marginH">15dp</dimen>
-
-	<dimen name="alarm_page_repeats_marginH">25dp</dimen>
-	<dimen name="alarm_page_repeats_margin">5dp</dimen>
-
-	<dimen name="alarm_page_button_marginV">30dp</dimen>
-	<dimen name="alarm_page_confirm_paddingH">60dp</dimen>
-	<dimen name="alarm_page_button_distanceH">20dp</dimen>
-	<dimen name="alarm_page_button_paddingV">20dp</dimen>
-
-	<dimen name="alarm_page_title_text">20sp</dimen>
-	<dimen name="alarm_page_name_text">15sp</dimen>
-	<dimen name="alarm_page_content_text">10sp</dimen>
-	<dimen name="alarm_page_button_text">15sp</dimen>
-	<dimen name="alarm_page_time_text">15sp</dimen>
-
-	<!-- alarm label item -->
-	<dimen name="label_paddingV">10dp</dimen>
-	<dimen name="label_marginH">5dp</dimen>
-
-	<dimen name="add_label_padding">20dp</dimen>
-	<dimen name="add_label_title_padding">20dp</dimen>
-	<dimen name="add_label_item_size">20dp</dimen>
-	<dimen name="add_item_margin">7dp</dimen>
-	<dimen name="add_label_button_marginT">10dp</dimen>
-	<dimen name="add_label_button_paddingH">15dp</dimen>
-	<dimen name="add_label_button_paddingV">5dp</dimen>
-
-	<dimen name="label_text">11dp</dimen>
-	<dimen name="add_label_text">15sp</dimen>
+	<dimen name="arrow_updown_paddingR">10dp</dimen>
 
 	<!--  main page  -->
 	<dimen name="main_bottom_bar_sizeH">60dp</dimen>
-	<dimen name="main_bottom_bar_marginT">10dp</dimen>
-	<dimen name="main_bottom_bar_marginB">5dp</dimen>
+	<dimen name="main_bottom_bar_marginH">10dp</dimen>
+	<dimen name="main_bottom_bar_marginV">5dp</dimen>
+	<dimen name="main_bottom_bar_padding">5dp</dimen>
 	<dimen name="main_bottom_bar_text_marginT">2dp</dimen>
 	<dimen name="main_bottom_bar_split_marginV">5dp</dimen>
 
@@ -152,6 +105,104 @@
 	<dimen name="main_popup_content_text">13sp</dimen>
 	<dimen name="main_popup_button_text">13sp</dimen>
 	<dimen name="main_popup_time_text">13sp</dimen>
+
+	<!-- alarm information -->
+	<dimen name="alarm_page_contentbox_sizeH">20dp</dimen>
+	<dimen name="alarm_page_contentbox_paddingH">10dp</dimen>
+
+	<dimen name="alarm_page_name_marginT">30dp</dimen>
+	<dimen name="alarm_page_name_marginH">15dp</dimen>
+	<dimen name="alarm_page_name_marginB">5dp</dimen>
+
+	<dimen name="alarm_page_box_paddingH">15dp</dimen>
+	<dimen name="alarm_page_box_paddingV">10dp</dimen>
+
+	<dimen name="alarm_page_content_marginH">20dp</dimen>
+	<dimen name="alarm_page_content_paddingV">10dp</dimen>
+	<dimen name="alarm_page_content_distanceV">5dp</dimen>
+	<dimen name="alarm_page_content_distanceVL">10dp</dimen>
+	<dimen name="alarm_page_content_distanceH">5dp</dimen>
+
+	<dimen name="alarm_page_count_paddingV">5dp</dimen>
+	<dimen name="alarm_page_time_paddingV">7dp</dimen>
+
+	<dimen name="alarm_page_split_marginH">15dp</dimen>
+
+	<dimen name="alarm_page_repeats_marginH">25dp</dimen>
+	<dimen name="alarm_page_repeats_margin">5dp</dimen>
+
+	<dimen name="alarm_page_button_marginV">30dp</dimen>
+	<dimen name="alarm_page_confirm_paddingH">60dp</dimen>
+	<dimen name="alarm_page_button_distanceH">20dp</dimen>
+	<dimen name="alarm_page_button_paddingV">20dp</dimen>
+
+	<dimen name="alarm_page_name_text">15sp</dimen>
+	<dimen name="alarm_page_content_text">10sp</dimen>
+	<dimen name="alarm_page_button_text">15sp</dimen>
+	<dimen name="alarm_page_time_text">15sp</dimen>
+
+	<!-- alarm label item -->
+	<dimen name="label_paddingV">10dp</dimen>
+	<dimen name="label_marginH">5dp</dimen>
+
+	<dimen name="add_label_padding">20dp</dimen>
+	<dimen name="add_label_title_padding">20dp</dimen>
+	<dimen name="add_label_item_size">20dp</dimen>
+	<dimen name="add_item_margin">7dp</dimen>
+	<dimen name="add_label_button_marginT">10dp</dimen>
+	<dimen name="add_label_button_paddingH">15dp</dimen>
+	<dimen name="add_label_button_paddingV">5dp</dimen>
+
+	<dimen name="label_text">11dp</dimen>
+	<dimen name="add_label_text">15sp</dimen>
+
+	<!-- search page -->
+	<dimen name="search_page_split_marginH">15dp</dimen>
+	<dimen name="search_page_searchbar_padding">25dp</dimen>
+	<dimen name="search_page_searchbar_split_margin">2dp</dimen>
+	<dimen name="search_page_searchbtn_size">40dp</dimen>
+	<dimen name="search_page_searchbtn_padding">10dp</dimen>
+	<dimen name="search_page_content_marginH">20dp</dimen>
+
+	<dimen name="search_page_searchbar_text">13sp</dimen>
+	<dimen name="search_page_type_text">12sp</dimen>
+
+	<dimen name="search_recent_item_paddingV">5dp</dimen>
+	<dimen name="search_recent_item_paddingH">10dp</dimen>
+	<dimen name="search_recent_item_padding">5dp</dimen>
+
+	<dimen name="search_recent_title_marginV">10dp</dimen>
+
+	<dimen name="search_recent_text">13sp</dimen>
+
+	<dimen name="search_result_item_paddingH">30dp</dimen>
+	<dimen name="search_result_item_paddingV">5dp</dimen>
+	<dimen name="search_result_item_content_padding">10dp</dimen>
+	<dimen name="search_result_item_distance">2dp</dimen>
+	<dimen name="search_result_item_distanceL">5dp</dimen>
+
+	<dimen name="search_result_arrow_sizeH">20dp</dimen>
+	<dimen name="search_result_arrow_padding">3dp</dimen>
+	<dimen name="search_result_pagebar_marginV">20dp</dimen>
+	<dimen name="search_result_page_marginH">20dp</dimen>
+	<dimen name="search_result_page_item_marginH">5dp</dimen>
+	<dimen name="search_result_page_item_size">20dp</dimen>
+
+	<dimen name="search_result_text">13sp</dimen>
+	<dimen name="search_result_en_text">10sp</dimen>
+	<dimen name="search_result_page_item_text">13dp</dimen>
+
+	<!-- medicine detail activity -->
+	<dimen name="medicine_paddingH">30dp</dimen>
+	<dimen name="medicine_paddingV">40dp</dimen>
+	<dimen name="medicine_title_marginT">20dp</dimen>
+	<dimen name="medicine_title_marginB">10dp</dimen>
+	<dimen name="medicine_content_padding">10dp</dimen>
+	<dimen name="medicine_context_distance">2dp</dimen>
+
+	<dimen name="medicine_title_text">14sp</dimen>
+	<dimen name="medicine_content_text">15sp</dimen>
+	<dimen name="medicine_content_en_text">10sp</dimen>
 
 	<!-- popup window -->
 	<dimen name="popup_padding">10dp</dimen>
