--- a/Zipssa/app/src/main/res/layout/list_fragment.xml
+++ b/Zipssa/app/src/main/res/layout/list_fragment.xml
@@ -4,95 +4,120 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@color/background_theme"
 	android:orientation="vertical">
 
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		android:orientation="horizontal"
-		android:background="@color/main_theme">
-
-		<ImageView
-			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
-			android:src="@drawable/main_logo"
-			android:layout_margin="@dimen/main_logo_margin"/>
-	</LinearLayout>
-
-	<LinearLayout
+	<androidx.drawerlayout.widget.DrawerLayout
+		android:id="@+id/sync_drawer"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical">
-
+		tools:openDrawer="right">
+		
 		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal"
-			android:layout_gravity="top|center"
-			android:layout_marginVertical="@dimen/main_title_marginV">
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" 
+			android:orientation="vertical"
+			android:background="@color/background_theme">
 
-			<TextView
-				android:id="@+id/main_name"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:fontFamily="@font/bmjua"
-				android:text="약타미"
-				android:textColor="@color/text_color"
-				android:textSize="@dimen/main_title_text" />
+			<FrameLayout
+				android:layout_width="match_parent"
+				android:layout_height="?attr/actionBarSize"
+				android:background="@color/background_theme">
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:fontFamily="@font/bmjua"
-				android:text=" 님의 리스트"
-				android:textColor="@color/text_color"
-				android:textSize="@dimen/main_subtitle_text" />
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:layout_gravity="center"
+					android:src="@drawable/main_logo"
+					android:adjustViewBounds="true"
+					android:layout_margin="@dimen/main_logo_margin"/>
+
+				<ImageView
+					android:id="@+id/drawer_open_btn"
+					android:layout_width="@dimen/sync_drawer_editbtn_size"
+					android:layout_height="@dimen/sync_drawer_editbtn_size"
+					android:layout_gravity="right|center"
+					android:adjustViewBounds="true"
+					android:layout_marginHorizontal="@dimen/titlebar_btn_marginH"
+					android:src="@drawable/drawer_open_icon" />
+			</FrameLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="vertical">
+
+				<LinearLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:layout_gravity="top|center"
+					android:layout_marginVertical="@dimen/main_title_marginV">
+
+					<TextView
+						android:id="@+id/main_name"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:fontFamily="@font/bmjua"
+						android:text="약타미"
+						android:textColor="@color/text_color"
+						android:textSize="@dimen/main_title_text" />
+
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:fontFamily="@font/bmjua"
+						android:text=" 님의 리스트"
+						android:textColor="@color/text_color"
+						android:textSize="@dimen/main_subtitle_text" />
+				</LinearLayout>
+
+				<View
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/split_line"
+					android:background="@color/split_line"
+					android:layout_marginHorizontal="@dimen/main_split_marginH"/>
+
+				<LinearLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:layout_gravity="top|center"
+					android:layout_marginVertical="@dimen/main_date_marginV">
+
+					<ImageView
+						android:id="@+id/main_date_before"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:layout_marginVertical="@dimen/main_date_arrow_marginV"
+						android:adjustViewBounds="true"
+						android:src="@drawable/arrow_left" />
+
+					<TextView
+						android:id="@+id/main_date"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginHorizontal="@dimen/main_date_marginV"
+						android:fontFamily="@font/bmjua"
+						android:text="0000 / 00 / 00"
+						android:textColor="@color/text_color"
+						android:textSize="@dimen/main_date_text" />
+
+					<ImageView
+						android:id="@+id/main_date_next"
+						android:layout_width="wrap_content"
+						android:layout_height="match_parent"
+						android:layout_marginVertical="@dimen/main_date_arrow_marginV"
+						android:adjustViewBounds="true"
+						android:src="@drawable/arrow_right" />
+				</LinearLayout>
+
+				<androidx.recyclerview.widget.RecyclerView
+					android:id="@+id/main_list_container"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent" />
+			</LinearLayout>
 		</LinearLayout>
 
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/main_split_marginH"/>
-
-		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal"
-			android:layout_gravity="top|center"
-			android:layout_marginVertical="@dimen/main_date_marginV">
-
-			<ImageView
-				android:id="@+id/main_date_before"
-				android:layout_width="wrap_content"
-				android:layout_height="match_parent"
-				android:layout_marginVertical="@dimen/main_date_arrow_marginV"
-				android:adjustViewBounds="true"
-				android:src="@drawable/arrow_left" />
-
-			<TextView
-				android:id="@+id/main_date"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginHorizontal="@dimen/main_date_marginV"
-				android:fontFamily="@font/bmjua"
-				android:text="0000 / 00 / 00"
-				android:textColor="@color/text_color"
-				android:textSize="@dimen/main_date_text" />
-
-			<ImageView
-				android:id="@+id/main_date_next"
-				android:layout_width="wrap_content"
-				android:layout_height="match_parent"
-				android:layout_marginVertical="@dimen/main_date_arrow_marginV"
-				android:adjustViewBounds="true"
-				android:src="@drawable/arrow_right" />
-		</LinearLayout>
-
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/main_list_container"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent" />
-	</LinearLayout>
+		<include layout="@layout/sync_drawer" />
+	</androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
