--- a/Zipssa/app/src/main/res/layout/list_item_popup.xml
+++ b/Zipssa/app/src/main/res/layout/list_item_popup.xml
@@ -5,6 +5,7 @@
 	android:orientation="vertical">
 
 	<FrameLayout
+		android:id="@+id/alarm_label"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/main_popup_title">
@@ -13,25 +14,19 @@
 			android:id="@+id/alarm_title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:fontFamily="@font/bmjua"
+			android:fontFamily="@font/lotte_dream_bold"
 			android:layout_gravity="center"
 			android:padding="@dimen/main_popup_title_padding"
 			android:textColor="@color/text_color"
 			android:textSize="@dimen/main_popup_title_text"
 			android:text="처방전"/>
 
-		<ToggleButton
+		<Switch
 			android:id="@+id/alarm_switch"
-			android:layout_width="@dimen/main_popup_switch_sizeH"
-			android:layout_height="@dimen/main_popup_switch_sizeV"
-			android:background="@drawable/alarm_btn_selector"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			android:layout_gravity="right|center"
-			android:layout_marginVertical="@dimen/main_popup_switch_marginV"
-			android:layout_marginRight="@dimen/main_popup_switch_marginR"
-			android:fontFamily="@font/daylight_210"
-			android:textOn="알림 on"
-			android:textOff="알림 off"
-			android:textSize="@dimen/main_popup_switch_text"/>
+			android:layout_marginRight="@dimen/main_popup_switch_marginR" />
 	</FrameLayout>
 
 	<ScrollView
@@ -56,7 +51,7 @@
 					android:id="@+id/start_date"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:fontFamily="@font/bmjua"
+					android:fontFamily="@font/nanum_square_ac"
 					android:textSize="@dimen/main_popup_date_text"
 					android:textColor="@color/text_color"
 					android:text="0월 00일"/>
@@ -64,7 +59,7 @@
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:fontFamily="@font/daylight_210"
+					android:fontFamily="@font/nanum_square_ac"
 					android:textSize="@dimen/main_popup_date_text"
 					android:textColor="@color/text_color"
 					android:text=" 부터 "/>
@@ -73,7 +68,7 @@
 					android:id="@+id/end_date"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:fontFamily="@font/bmjua"
+					android:fontFamily="@font/nanum_square_ac"
 					android:textSize="@dimen/main_popup_date_text"
 					android:textColor="@color/text_color"
 					android:text="0월 00일"/>
@@ -81,7 +76,7 @@
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:fontFamily="@font/daylight_210"
+					android:fontFamily="@font/nanum_square_ac"
 					android:textSize="@dimen/main_popup_date_text"
 					android:textColor="@color/text_color"
 					android:text=" 까지 복용"/>
@@ -104,9 +99,9 @@
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					android:gravity="center"
-					android:fontFamily="@font/bmjua"
+					android:fontFamily="@font/lotte_dream_bold"
 					android:textSize="@dimen/main_popup_content_text"
-					android:textColor="@color/text_color_gray"
+					android:textColor="@color/text_color"
 					android:text="복용 횟수"/>
 
 				<LinearLayout
@@ -118,7 +113,7 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:fontFamily="@font/daylight_210"
+						android:fontFamily="@font/nanum_square_ac"
 						android:textSize="@dimen/main_popup_content_text"
 						android:textColor="@color/text_color"
 						android:text="하루 "/>
@@ -127,7 +122,7 @@
 						android:id="@+id/alarm_count"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:fontFamily="@font/daylight_210"
+						android:fontFamily="@font/nanum_square_ac"
 						android:textSize="@dimen/main_popup_content_text"
 						android:textColor="@color/text_color"
 						android:text="0"/>
@@ -135,7 +130,7 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:fontFamily="@font/daylight_210"
+						android:fontFamily="@font/nanum_square_ac"
 						android:textSize="@dimen/main_popup_content_text"
 						android:textColor="@color/text_color"
 						android:text="회 복용"/>
@@ -160,9 +155,9 @@
 					android:layout_weight="1"
 					android:gravity="center"
 					android:layout_marginVertical="@dimen/main_popup_time_paddingV"
-					android:fontFamily="@font/bmjua"
+					android:fontFamily="@font/lotte_dream_bold"
 					android:textSize="@dimen/main_popup_content_text"
-					android:textColor="@color/text_color_gray"
+					android:textColor="@color/text_color"
 					android:text="알림 시간"/>
 
 				<LinearLayout
@@ -209,9 +204,9 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:fontFamily="@font/daylight_210"
+				android:fontFamily="@font/nanum_square_ac"
 				android:text="삭제"
-				android:textColor="@color/text_color"
+				android:textColor="@color/text_color_gray"
 				android:textSize="@dimen/main_popup_button_text"
 				android:padding="@dimen/main_popup_button_text_padding"/>
 		</LinearLayout>
@@ -237,9 +232,9 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:fontFamily="@font/daylight_210"
+				android:fontFamily="@font/nanum_square_ac"
 				android:textSize="@dimen/main_popup_button_text"
-				android:textColor="@color/text_color"
+				android:textColor="@color/text_color_gray"
 				android:text="확인"
 				android:padding="@dimen/main_popup_button_text_padding" />
 		</LinearLayout>
@@ -265,9 +260,9 @@
 			<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:fontFamily="@font/daylight_210"
+				android:fontFamily="@font/nanum_square_ac"
 				android:textSize="@dimen/main_popup_button_text"
-				android:textColor="@color/text_color"
+				android:textColor="@color/text_color_gray"
 				android:text="수정"
 				android:padding="@dimen/main_popup_button_text_padding"/>
 		</LinearLayout>
