--- a/Zipssa/app/src/main/res/layout/list_remain_time_item.xml
+++ b/Zipssa/app/src/main/res/layout/list_remain_time_item.xml
@@ -8,7 +8,7 @@
 		android:id="@+id/time_item"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:fontFamily="@font/daylight_210"
+		android:fontFamily="@font/nanum_square_ac"
 		android:textSize="@dimen/main_popup_time_text"
 		android:textColor="@color/text_color"
 		android:layout_marginVertical="@dimen/main_popup_time_paddingV"
