--- a/Zipssa/app/src/main/res/layout/mypage_sync_addcrew_popup.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_sync_addcrew_popup.xml
@@ -8,23 +8,26 @@
 	android:gravity="center">
 
 	<TextView
-		android:id="@+id/popup_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:fontFamily="@font/bmjua"
-		android:textSize="@dimen/popup_content_text"
-		android:textColor="@color/text_color"
-		android:text="Title"/>
-
-	<TextView
-		android:id="@+id/popup_content"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:fontFamily="@font/daylight_210"
+		android:gravity="center"
+		android:fontFamily="@font/nanum_square_ac"
 		android:padding="@dimen/popup_content_padding"
-		android:textSize="@dimen/popup_content_text"
+		android:textSize="@dimen/sync_popup_information_text"
 		android:textColor="@color/text_color"
-		android:text="Content"/>
+		android:text="인증번호는 3분 이내에 입력해 주세요"/>
+
+	<EditText
+		android:id="@+id/validation_code"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:padding="@dimen/sync_popup_code_padding"
+		android:layout_marginHorizontal="@dimen/sync_popup_input_marginH"
+		android:fontFamily="@font/lotte_dream_bold"
+		android:textSize="@dimen/sync_popup_code_text"
+		android:textColor="@color/text_color"
+		android:text="" />
 
 	<View
 		android:layout_width="match_parent"
@@ -44,8 +47,8 @@
 			android:layout_weight="1"
 			android:padding="@dimen/popup_button_padding"
 			android:gravity="center"
-			android:fontFamily="@font/daylight_210"
-			android:textSize="@dimen/popup_button_text"
+			android:fontFamily="@font/nanum_square_ac"
+			android:textSize="@dimen/sync_popup_button_text"
 			android:textColor="@color/text_color"
 			android:text="취소"/>
 
@@ -61,8 +64,10 @@
 			android:layout_weight="1"
 			android:padding="@dimen/popup_button_padding"
 			android:gravity="center"
-			android:fontFamily="@font/daylight_210"
-			android:textSize="@dimen/popup_button_text"
-			android:textColor="@color/text_color"/>
+			android:fontFamily="@font/nanum_square_ac"
+			android:textSize="@dimen/sync_popup_button_text"
+			android:textColor="@color/text_color"
+			android:text="확인"/>
 	</LinearLayout>
+
 </LinearLayout>
