--- a/Zipssa/app/src/main/res/layout/mypage_sync_addmanager_popup.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_sync_addmanager_popup.xml
@@ -8,23 +8,34 @@
 	android:gravity="center">
 
 	<TextView
-		android:id="@+id/popup_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:fontFamily="@font/bmjua"
-		android:textSize="@dimen/popup_content_text"
+		android:gravity="center"
+		android:fontFamily="@font/nanum_square_ac"
+		android:textSize="@dimen/sync_popup_content_text"
 		android:textColor="@color/text_color"
-		android:text="Title"/>
+		android:text="매니저의 '크루 추가' 화면에서\n아래의 인증번호를 입력해 주세요" />
 
 	<TextView
-		android:id="@+id/popup_content"
+		android:id="@+id/validation_code"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:fontFamily="@font/daylight_210"
-		android:padding="@dimen/popup_content_padding"
-		android:textSize="@dimen/popup_content_text"
+		android:gravity="center"
+		android:fontFamily="@font/lotte_dream_bold"
+		android:padding="@dimen/sync_popup_code_padding"
+		android:textSize="@dimen/sync_popup_code_text"
 		android:textColor="@color/text_color"
-		android:text="Content"/>
+		android:text="0000"/>
+
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:fontFamily="@font/nanum_square_ac"
+		android:padding="@dimen/popup_content_padding"
+		android:textSize="@dimen/sync_popup_information_text"
+		android:textColor="@color/text_color"
+		android:text="인증번호는 3분 이내에 입력해 주세요"/>
 
 	<View
 		android:layout_width="match_parent"
@@ -38,31 +49,14 @@
 		android:orientation="horizontal">
 
 		<TextView
-			android:id="@+id/popup_cancel"
-			android:layout_width="0dp"
+			android:id="@+id/popup_confirm"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_weight="1"
 			android:padding="@dimen/popup_button_padding"
 			android:gravity="center"
 			android:fontFamily="@font/daylight_210"
 			android:textSize="@dimen/popup_button_text"
 			android:textColor="@color/text_color"
-			android:text="취소"/>
-
-		<View
-			android:layout_width="@dimen/split_line"
-			android:layout_height="match_parent"
-			android:background="@color/split_line"/>
-
-		<TextView
-			android:id="@+id/popup_confirm"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:padding="@dimen/popup_button_padding"
-			android:gravity="center"
-			android:fontFamily="@font/daylight_210"
-			android:textSize="@dimen/popup_button_text"
-			android:textColor="@color/text_color"/>
+			android:text="확인"/>
 	</LinearLayout>
 </LinearLayout>
