--- a/Zipssa/app/src/main/res/layout/mypage_myprofile_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_myprofile_activity.xml
@@ -33,9 +33,9 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
 		android:orientation="vertical"
-		android:layout_marginVertical="@dimen/myprofile_marginV"
+		android:layout_marginTop="@dimen/mypage_marginV"
 		android:paddingHorizontal="@dimen/myprofile_paddingH"
 		android:background="@color/background_theme">
 
