--- a/Zipssa/app/src/main/res/layout/mypage_sync_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_sync_activity.xml
@@ -48,7 +48,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
-		android:layout_marginVertical="@dimen/sync_tab_marginV">
+		android:layout_marginVertical="@dimen/mypage_marginV">
 
 		<RadioButton
 			android:layout_width="0dp"
