--- a/Zipssa/app/src/main/res/values/colors.xml
+++ b/Zipssa/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="white_pressed">#E6E6E6</color>
     <color name="bottom_bar_text">#FFFFFF</color>
 
-    <color name="medicine_detail_warning">#FF7070</color>
+    <color name="warning_color">#FF7070</color>
 
     <color name="mypage_background">#F7F7F7</color>
     <color name="history_photo_background">#F7F7F7</color>
