--- a/Zipssa/app/src/main/res/values/dimens.xml
+++ b/Zipssa/app/src/main/res/values/dimens.xml
@@ -310,9 +310,24 @@
 	<dimen name="history_photo_title_text">15sp</dimen>
 
 	<!-- setting activity -->
-	<dimen name="setting_split_paddingH">15dp</dimen>
+	<dimen name="setting_split_marginH">15dp</dimen>
 	<dimen name="setting_menu_paddingV">13dp</dimen>
 	<dimen name="setting_menu_paddingH">35dp</dimen>
+
+	<!-- leaving activity -->
+	<dimen name="leaving_split_marginH">15dp</dimen>
+	<dimen name="leaving_item_paddingV">13dp</dimen>
+	<dimen name="leaving_item_marginH">35dp</dimen>
+	<dimen name="leaving_input_padding">5dp</dimen>
+	<dimen name="leaving_warning_marginL">10dp</dimen>
+	<dimen name="leaving_warning_marginT">20dp</dimen>
+	<dimen name="leaving_confirm_marginT">40dp</dimen>
+	<dimen name="leaving_confirm_paddingV">10dp</dimen>
+	<dimen name="leaving_confirm_paddingH">80dp</dimen>
+
+	<dimen name="leaving_warning_title_text">15sp</dimen>
+	<dimen name="leaving_warning_text">10sp</dimen>
+	<dimen name="leaving_confirm_text">15sp</dimen>
 
 	<!-- popup window -->
 	<dimen name="popup_padding">10dp</dimen>
