--- a/Zipssa/app/src/main/res/layout/mypage_service_contract_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_service_contract_activity.xml
@@ -24,37 +24,9 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:text="복용 내역"
+			android:text="이용약관"
 			android:fontFamily="@font/bmjua"
 			android:textSize="@dimen/titlebar_title_text"
 			android:textColor="#FFFFFF" />
 	</FrameLayout>
-
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_marginTop="@dimen/mypage_marginV"
-		android:background="@color/background_theme"
-		android:orientation="vertical">
-
-		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:paddingVertical="@dimen/mypage_menu_paddingV"
-			android:paddingHorizontal="@dimen/mypage_menu_paddingH"
-			android:fontFamily="@font/nanum_square_ac"
-			android:textSize="@dimen/history_menu_text"
-			android:textColor="@color/text_color"
-			android:text="처방전 내역"/>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/split_line"
-			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/history_split_paddingH"/>
-
-		<androidx.recyclerview.widget.RecyclerView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent" />
-	</LinearLayout>
 </LinearLayout>
