--- a/Zipssa/app/src/main/res/layout/mypage_myprofile_activity.xml
+++ b/Zipssa/app/src/main/res/layout/mypage_myprofile_activity.xml
@@ -106,6 +106,7 @@
 			android:background="@color/split_line" />
 
 		<LinearLayout
+			android:id="@+id/change_pw_btn"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
